Adding first edits

--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -35,7 +35,7 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
             {% assign pages_list = site.pages %}
-            {% assign group = 'navigation' %}
+            {% assign group = 'topbar' %}
             {% include JB/pages_list %}
           </ul>
         </div>
