--- a/assets/themes/bootstrap/css/style.css
+++ b/assets/themes/bootstrap/css/style.css
@@ -63,3 +63,15 @@
   background: #57A957;
   border: 1px solid #4c964d;
   color: #FFF; }
+  
+.navbar-blue {
+  background-color: #0B486B;
+  border-color: #0B486B;
+}
+
+.navbar-blue .navbar-brand, .navbar-blue .navbar-nav {
+  color: white;
+}
+
+body { padding-top: 70px; }
+  
