Changing asset path for homepage.js

--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -64,6 +64,6 @@
     <script src="{{ ASSET_PATH }}/resources/bootstrap/js/bootstrap.min.js"></script>
     <script src="{{ ASSET_PATH }}/resources/c3/d3.min.js"></script>
     <script src="{{ ASSET_PATH }}/resources/c3/c3.min.js"></script>
-    <script src="{{ BASE_PATH }}/custom/homepage.js"></script>
+    <script src="{{ ASSET_PATH }}/custom/homepage.js"></script>
   </body>
 </html>
