Adding updated on text to navbar

--- a/_includes/themes/bootstrap/default.html
+++ b/_includes/themes/bootstrap/default.html
@@ -41,6 +41,8 @@
             {% assign group = 'topbar' %}
             {% include JB/pages_list %}
           </ul>
+          <ul class="nav navbar-nav navbar-right" id="updatedat">
+          </ul>
         </div>
       </div>
     </nav>
